--- a/Tarea 2/index.html
+++ b/Tarea 2/index.html
@@ -1,34 +1,97 @@
-<h1 style="width: 500px; color: aliceblue;"> Gilmore Girls</h1>
-<h2> <b style="color: #683928;">Personajes mas migajeros<b></h2>
-  <body> <img src="https://images.bauerhosting.com/legacy/media/5dd7/dadd/0a4e/c40c/edf7/496d/15.jpg?auto=format&w=1440&q=80" style="width: 500px;"    
+
+
+<h1 style="font-size: 90px; color: #ffffff;"> Gilmore Girls</h1> 
+<style>
+    .contenedor{
+        position: absolute;
+        width: 1400px;
+        height: 5px;
+        background-color: #683928;
+        opacity: 70%;
+
+    }
+</style>
+
+
+<body>
+    <div class="contenedor"> </div>
+</body>
+
+
+<h2> <b style="color: #683928;">
+    <br> Personajes mas migajeros<b></h2> 
+  <body> <img src="https://images.bauerhosting.com/legacy/media/5dd7/dadd/0a4e/c40c/edf7/496d/15.jpg?auto=format&w=1440&q=80" style="width: 455px;"    
   </body> 
 
 <body style="background-color: #e4c9ae;"
 
-<br> <ul> <i style="color: #ffffff; font-size: 25px;">Emily</i></ul> <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color:  #683928;"> Aunque richard la mayoria del tiempo fue muy buen esposo,
+<br> <ul> <i style="color: #ffffff; font-size: 25px;">Emily </i></ul> <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color:  #683928;"> Aunque richard la mayoria del tiempo fue muy buen esposo,
     <br> nunca estaba presente y todo el tema de pennylin fue algo que yo en lo personal jamas habria perdonado,
     <br>pero la pongo muy arriba porque no se quedaba callada, solo no salia de ahi.</p>
+  <body>
+    <img src="emily.jpg" style="width: 350px;"
+  </body>
 
 <ul> <i style="color: #ffffff; font-size: 25px"> Jason</i></ul> <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color: #683928;">Aunque no soporto nada de el, fue muy migajero al dejar que lorelai escondiera su relacion por miedo a sus papas,
     <br>aunque igual lo entiendo porque de su parte podria perder su trabajo, que era casi toda su vida.</p>
+<body>
+    <img src="Jason .jpg" style="width: 350px;"
+  </body>
 
 <ul> <i style="color: #ffffff; font-size: 25px">Lindsay</i></ul> <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color:  #683928;">Realmente esta chica merecia lo mejor del mundo, pero era migajera, literalmente dean le daba lo minimo de atencion 
     <br>y mentia constantemente, aunque si es verdad que le termino un tiempo despues, estuvo mucho tiempo aferrada a su matrimonio.
 </p>
+<body>
+    <img src="lindsay.jpg" style="width: 350px;"
+  </body>
+
 <ul> <i style="color: #ffffff; font-size: 25px">Christopher</i></ul> <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color:  #683928;">Estuvo toda su vida esperando por lorelai, habria tomado cualquier oportunidad para estar con ella incluso si el no
 <br>fuera lo que ella queria, lo cual me parece bipolar porque ya todos sabemos que abandono a la mujer que amaba con una hija de el, 
 <br>solo para anos despues quejarse de que le hicieronlo mismo.</p>
+<body>
+    <img src="chris.jpg" style="width: 350px;"
+  </body>
 
 <ul> <i style="color: #ffffff; font-size: 25px"> Jamie</i></ul> <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color:  #683928;">Se aferro a su relacion con paris incluso cuando ella lo estaba enganando, aunque yo ame a paris, jamie era excelente 
     <br>y le daba mas amor a ella de lo que creia merecer entonces solo lo alejo de su vida haciendole dano, no lo pongo mas arriba porque no 
     <br>tuvo mucha relevancia o screentime.</p>
+    <body>
+    <img src="jamie.jpg" style="width: 350px;"
+  </body>
 
 <ul> <i style="color: #ffffff; font-size: 25px"> Tristan</i></ul> <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color:  #683928;">Si es verdad que era irritante y fue muy raro que le empezara a gustar "mary" de la nada, literalmente hubiera 
     <br>tomado cualquier muestra de amor que ella le diera, fue muy directa su manera de mostrar amor, y como ella no sentia nada por el 
     <br>solo lo tomo como un juego y lo dejo ahi.</p>
+    <body>
+    <img src="Tristan.jpg" style="width: 350px;"
+  </body>
 
 <ul> <i style="color: #ffffff; font-size: 25px"> Dean</i></ul> <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color:  #683928;">Si, y no estoy hablando de las ultimas temporadas.
 cuando rory se empezo a enamorar de jess el estaba en su peak de amor por ella, se quedaba ahi aferrandose hasta que finalmente habia un triangulo amoroso que no podria soportar. Pero realmente fue el novio de rory que mas la amo, estaba obsesionado con todo lo que tenga que ver con rory, y si, tenia sus red flags pero hubiera estado mejor hacerlo de una manera pacifica, la ruptura realmente marco un antes y despues en su vida.</p>
+<body>
+    <img src="dean.jpg" style="width: 350px;"
+  </body>
 
-<span style="color: aliceblue;font-size: 25px;"> <i>Los personajes tienen sus defectos pero igual el fandom los quiere</i>
+
+    <div class="contenedor"> </div>
+</body>
+
+<span style="color: aliceblue;font-size: 25px;"> <i> 
+    <br> personajes tienen sus defectos pero igual el fandom los quiere</i>
 <a href="https://www.netflix.com/cl/title/70155618" style="text-decoration: none;font-size: 25px; color: #ffffff; font-family: ;"><br><i>Si eres como yo que se ve mil veces las series aca te dejo el link</i> </a>
+
+
+<style>
+    .contenedor{
+        position: absolute;
+        width: 1400px;
+        height: 5px;
+        background-color: #683928;
+        opacity: 70%;
+
+    }
+</style>
+<body>
+<audio controls autoplay>
+    <source src="lalala_gilmore_girls.mp3" type=" audio/mpeg"> 
+</audio>
